<resources>

    <!--Home´s String-->
    <string name="nothing_toDo">Nothing to do</string>
    <string name="description_button_add">button to create a task</string>
    <string name="icon_note">Note icon</string>
    <string name="all_list">All List</string>

    <!--New task´s String-->
    <string name="app_name">taskAppToti</string>
    <string name="new_task">New Task</string>
    <string name="what_is_the_new_task">Task Name</string>
    <string name="hint_new_task">Enter Task Here</string>
    <string name="task_description">Description</string>
    <string name="hint_task_description">Enter Description Here</string>

    <!--Btn from task list-->

    <string name="delete_btn_description">Button to delete task</string>
    <string name="edit_btn_description">Button to edit task</string>



</resources>